Comment: feat: enable disqus comments system
Signed-off-by: Zhang Yuzheng <me@zhanyuzheng.com>

--- a/_config.yml
+++ b/_config.yml
@@ -481,8 +481,8 @@ pangu: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: zhangyuzheng-com
   count: true
   lazyload: false
 
